# Project

./: .gitignore
ParkJeongHee/JGEngine/: CMakeLists.txt
ParkJeongHee/JGEngine/CMake/: CmakeCommands.txt
ParkJeongHee/JGEngine/Source/JGEngine/JGCore/: Abstract.h  Define.h  JGMath.h  JGMemory.cpp  JGMemory.h  TypeDefine.h
ParkJeongHee/JGEngine/Source/UnitTest/ConsoleTest/: main.cpp
ParkJeongHee/JGProject/JGEngine/: JGEngine.sln  jgengine.lua
ParkJeongHee/JGProject/JGEngine/Source/Core/: Application.cpp  Application.h  JGCore.h  pch.h
ParkJeongHee/JGProject/JGEngine/Source/Core/Class/: Command.h  FileIO.cpp  FileIO.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
ParkJeongHee/JGProject/JGEngine/Source/Core/Common/: Color.h  (+11 more)
ParkJeongHee/JGProject/JGEngine/Source/Editor/: JGEditor.cpp  JGEditor.h  main.cpp
ParkJeongHee/JGProject/JGGameProject/Project_A/: CMakeLists.txt  project.json
ParkJeongHee/JGProject/JGGameProject/Project_A/Classes/: AppDelegate.cpp  AppDelegate.h
ParkJeongHee/JGProject/JGGameProject/Project_A/proj.android/: settings.gradle
ParkJeongHee/JGProject/JGGameProject/Project_B/: Project_B.sln  Project_B.uproject
ParkJeongHee/JGProject/JGGameProject/Project_B/Config/: DefaultEngine.ini  DefaultGame.ini
ParkJeongHee/JGProject/JGGameProject/Project_B/ProjectB/: 2DUnitychanSamples.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  ProjectB.sln
ParkJeongHee/JGProject/JGGameProject/Project_B/Source/: Project_B.Target.cs  Project_BEditor.Target.cs
ParkJeongHee/JGProject/JGGameProject/Project_C/Asset/: testGameWorld.jgasset
(+297 files in other folders)
